[project]
name = "comfyui_accessories"
description = "Get Mask Dimensions"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/var1ableX/ComfyUI_Accessories"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_Accessories"
Icon = ""
